[package]
name = "did-runtime-api"
version = "0.1.0"
description = "Runtime API for DID queries"
authors = ["Quantum Blockchains"]
homepage = "https://quantumblockchains.io/"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Quantum-Blockchains/quantum-metachain"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
did = { path = "../did", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
  "sp-std/std",
  "did/std",
]
