[package]
name = "did"
version = "0.1.0"
description = ""
authors = ["Quantum Blockchains"]
homepage = "https://quantumblockchains.io/"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/Quantum-Blockchains/quantum-metachain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"], optional = true }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
sp-io = { version = "23.0.0", default-features = false, git = "https://github.com/Quantum-Blockchains/substrate.git", branch = "qsb-v0.0.1" }
ed25519-zebra = { version = "3.1.0", default-features = false, optional = true }
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-api/std",
    "sp-io/std",
    "ed25519-zebra/std",
    "bs58/std",
    "serde/std",
]
